# socketioxide-rust-chat

./: .env  Cargo.toml  README.md
src/: db.rs  db_model.rs  errors.rs  http_handlers.rs  http_routes.rs  main.rs  model.rs  socket.rs  socket_handlers.rs  socket_state.rs
