[package]
name = "socketoxide-chat-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketioxide = { version = "0.13.1", features = ["state"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
tower = "0.4.13"
tower-http = { version =  "0.5.2", features = ["cors"] }
mongodb = { version = "2.8.2", features = ["bson-chrono-0_4"] }
dotenv = "0.15.0"
thiserror = "1.0.61"
bson = "2.10.0"
names = "0.14.0"

# PREVIOUS DEPENDENCIES
# socketioxide = "0.8"
# tokio = { version = "1", features = ["full"] }
# tracing = "0.1"
# tracing-subscriber = "0.3"
# axum = "0.6"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"